--- a/anchors.htm
+++ b/anchors.htm
@@ -1,23 +1,25 @@
 <HTML>
+<head>
+<title>Песни из мультфильмов: работа Даниила Пупкина</title>
+</head>
 <BODY>
 Песни из мульфильмов
 Мы растем и взрослеем вместе с героями любимых мультфильмов, которые
 сражаются и побеждают, радуются и печалятся, а также поют песни.
 Слова и музыку этих песен можно найти в Интернете:
 <ul>
-<li>песни из мультфильма "Бременские музыканты"</li>
-<li>песни из мультфильма "Остров сокровищ"</li>
-<li>песни из мультфильма "Зима в Простоквашино"</li>.
+<li><a href = "https://ped-kopilka.ru/semeinaja-biblioteka/bremenskie-muzykanty-teksty-pesen-po-porjadku.html">песни из мультфильма "Бременские музыканты"</a></li>
+<li><a href ="https://pesni.guru/search/остров-сокровищ">песни из мультфильма "Остров сокровищ"</li></a>
+<li><a href ="https://songkino.ru/songs2m/zima.html">песни из мультфильма "Зима в Простоквашино"</a></li>.
 </ul>
-Тексты многих песен можно скачать из Интернета. Архив
-multsong.zip находится на сайте kpolyakov.spb.ru в папке download.
+Вот ещё один <a href="https://kpolyakov.spb.ru/download/multsong.zip">сборник песен.</a>
 <p>
 Для поиска других песен можно использовать
-поисковые системы, например: Google или Яндекс.
+поисковые системы, например: <a href = "https://www.google.ru/search?q=%D0%BF%D0%B5%D1%81%D0%BD%D0%B8+%D0%B8%D0%B7+%D0%BC%D1%83%D0%BB%D1%8C%D1%82%D1%84%D0%B8%D0%BB%D1%8C%D0%BC%D0%BE%D0%B2&newwindow=1&safe=strict&ei=h8vAY5HDNNfRqwG9i5TwBw&ved=0ahUKEwjRooeNycP8AhXX6CoKHb0FBX4Q4dUDCA8&uact=5&oq=%D0%BF%D0%B5%D1%81%D0%BD%D0%B8+%D0%B8%D0%B7+%D0%BC%D1%83%D0%BB%D1%8C%D1%82%D1%84%D0%B8%D0%BB%D1%8C%D0%BC%D0%BE%D0%B2&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQA0oECEEYAEoECEYYAFAYWLkDYJoEaABwAXgAgAEAiAEAkgEAmAEAoAEBwAEB&sclient=gws-wiz-serp">Google</a> или <a href="https://yandex.ru/search/?family=yes&clid=2380813&text=песни+из+мультфильмов&l10n=ru&lr=65&redircnt=1673579090.1">Яндекс.</a>
 </p>
 <p>
-Если у вас возникли вопросы, напишите нам по адресу
-profilbook@mail.ru.
+Если у вас возникли вопросы, напишите нам по адресу<a href="https://account.mail.ru/login?page=https%3A%2F%2Fe.mail.ru%2Finbox&allow_external=1&from=octavius">
+profilbook@mail.ru.</a>
 </p>
 </BODY>
 </HTML>
